--- a/angular-couchdb/src/app/categorie/categorie.component.html
+++ b/angular-couchdb/src/app/categorie/categorie.component.html
@@ -64,7 +64,7 @@
                     <div class="product-price">Prix: {{ product.price }}</div>
                     <div class="quantity text-danger custom-product-quantity"><b>Quantité disponible: {{ product.quantite}}</b></div>
                     <div class="promo-status" [ngClass]="{ 'promo': product.isPromo }">
-                      {{ product.isPromo ? 'En Promo' : 'Non Promo' }}
+                      {{ product.isPromo ? 'En Promo' : '' }}
                     </div>
                     <details class="accordion">
                       <summary>Détails du produit</summary>
