--- a/angular-couchdb/src/app/login/login.component.html
+++ b/angular-couchdb/src/app/login/login.component.html
@@ -33,21 +33,23 @@
                                     </div>
                                     <div class="card-back">
                                         <div class="center-wrap">
-                                            <div class="section text-center">
-                                                <h4 class="mb-4 pb-3">Sign Up</h4>
-                                                <div class="form-group">
-                                                    <input type="text" name="logname" class="form-style" placeholder="Your Full Name" id="logname" autocomplete="off">
-                                                    <i class="input-icon uil uil-user"></i>
-                                                </div>	
-                                
-                                                <div class="form-group mt-2">
-                                                    <input type="password" name="logpass" class="form-style" placeholder="Your Password" id="logpass" autocomplete="off">
-                                                    <i class="input-icon uil uil-lock-alt"></i>
-                                                </div>
-                                                <a href="#" class="btn mt-4">submit</a>
-                                            </div>
+                                          <div class="section text-center">
+                                            <h4 class="mb-4 pb-3">Sign Up</h4>
+                                            <form [formGroup]="registerForm" (ngSubmit)="handleRegister()">
+                                              <div class="form-group">
+                                                <input type="text" formControlName="username" class="form-style" placeholder="Your Full Name" autocomplete="off">
+                                                <i class="input-icon uil uil-user"></i>
+                                              </div>
+                                              <div class="form-group mt-2">
+                                                <input type="password" formControlName="password" class="form-style" placeholder="Your Password" autocomplete="off">
+                                                <i class="input-icon uil uil-lock-alt"></i>
+                                              </div>
+                                              <button type="submit">Submit</button>
+                                            </form>
+                                          </div>
                                         </div>
-                                    </div>
+                                      </div>
+                                      
                                 </div>
                             </div>
                         </div>
