--- a/angular-couchdb/src/app/login/login.component.html
+++ b/angular-couchdb/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div style="background-image: url(https://t3.ftcdn.net/jpg/03/55/60/70/360_F_355607062_zYMS8jaz4SfoykpWz5oViRVKL32IabTP.jpg)">
+<div style="background: linear-gradient(to right, rgb(0, 25, 89), rgb(255, 253, 153))">
     
         <div class="section">
             <div class="container">
