--- a/angular-couchdb/src/app/productdetails/productdetails.component.css
+++ b/angular-couchdb/src/app/productdetails/productdetails.component.css
@@ -10,7 +10,7 @@
   padding: 10px;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  background-color: rgba(231, 231, 84, 0.849);
+  background: linear-gradient(to right, rgb(220, 225, 144), rgb(5, 0, 70));
 }
 
 .product-item:hover {
