--- a/angular-couchdb/src/app/categorie/categorie.component.css
+++ b/angular-couchdb/src/app/categorie/categorie.component.css
@@ -11,7 +11,7 @@
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    background-color: rgba(231, 231, 84, 0.849);
+    background: linear-gradient(to right, rgb(220, 225, 144), rgb(132, 83, 0)) ;
   }
   .product-item:hover {
     transform: scale(1.07);
