--- a/angular-couchdb/src/app/categorie/categorie.component.html
+++ b/angular-couchdb/src/app/categorie/categorie.component.html
@@ -60,14 +60,14 @@
                     <img [src]="'assets/images/' + product.url_image" alt="{{ product.name }}" class="img-fluid" />
                   </div>
                   <div class="product-details">
-                    <div class="product-name">{{ product.name }}</div>
+                    <div class="product-name" style="font-weight: bold;">{{ product.name }}</div>
                     <div class="product-price">Prix: {{ product.price }}</div>
-                    <div class="quantity text-danger custom-product-quantity"><b>Quantité disponible: {{ product.quantite}}</b></div>
-                    <div class="promo-status" [ngClass]="{ 'promo': product.isPromo }">
-                      {{ product.isPromo ? 'En Promo' : '' }}
+                    <div class="" style="color: rgb(0, 92, 92);"><b>Quantité disponible: {{ product.quantite}}</b></div>
+                    <div class="" [ngClass]="{ 'promo': product.isPromo }" style="font-weight: bold;color: rgb(255, 217, 0);">
+                      {{ product.isPromo ? 'En Promo🔥' : '' }}
                     </div>
                     <details class="accordion">
-                      <summary>Détails du produit</summary>
+                      <summary style="font-weight: bold;">Détails du produit</summary>
                       <div class="accordion-body">
                         <p>{{ product.description }}</p>
                       </div>
