--- a/angular-couchdb/src/app/cart/cart.component.html
+++ b/angular-couchdb/src/app/cart/cart.component.html
@@ -25,7 +25,13 @@
             <img style="width: 3cm; height: 3cm;" [src]="'assets/images/' + item.url_image" alt="Product Image">
             <h4>{{ item.name }}</h4>
             <p>{{ item.price }}</p>
-            <p>{{ item.description }}</p>
+            <details class="accordion">
+              <summary style="font-weight: bold;">Détails du produit</summary>
+              <div class="accordion-body">
+                <p>{{ item.description }}</p>
+              </div>
+            </details>
+           
             
             <button type="button"(click)="removeFromCart(item)" class="btn btn-outline-warning" i18n>delete</button>
           </div>
