--- a/angular-couchdb/src/app/login/login.component.html
+++ b/angular-couchdb/src/app/login/login.component.html
@@ -5,7 +5,7 @@
                 <div class="row full-height justify-content-center">
                     <div class="col-12 text-center align-self-center py-5">
                         <div class="section pb-5 pt-5 pt-sm-2 text-center">
-                            <h6 class="mb-0 pb-3"><span>Log In </span><span>Sign Up</span></h6>
+                            <h6 class="mb-0 pb-3" ><span >Log In </span><span>Sign Up</span></h6>
                             <input class="checkbox" type="checkbox" id="reg-log" name="reg-log"/>
                             <label for="reg-log"></label>
                             <div class="card-3d-wrap mx-auto">
@@ -13,7 +13,7 @@
                                     <div class="card-front">
                                         <div class="center-wrap">
                                             <div class="section text-center">
-                                                <h4 class="mb-4 pb-3">Log In</h4>
+                                                <h4 class="mb-4 pb-3" style="color: aliceblue;">Log In</h4>
                                                 <div class="text-danger" *ngIf="errormessage">{{errormessage}}</div>
                                                 <form [formGroup]="formgroup" (ngSubmit)="handlelogin()">
                                                 <div class="form-group">
@@ -34,7 +34,7 @@
                                     <div class="card-back">
                                         <div class="center-wrap">
                                           <div class="section text-center">
-                                            <h4 class="mb-4 pb-3">Sign Up</h4>
+                                            <h4 class="mb-4 pb-3" style="color: aliceblue;">Sign Up</h4>
                                             <form [formGroup]="registerForm" (ngSubmit)="handleRegister()">
                                               <div class="form-group">
                                                 <input type="text" formControlName="username" class="form-style" placeholder="Your Full Name" autocomplete="off">
