--- a/angular-couchdb/src/app/admintemplate/admintemplate.component.html
+++ b/angular-couchdb/src/app/admintemplate/admintemplate.component.html
@@ -33,7 +33,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" [routerLink]="['/admin/categorie', 'phone']" i18n>phone</a></li>
-                <li><a class="dropdown-item" [routerLink]="['/admin/categorie', 'pc']" i18n>pc</a></li>
+                <li><a class="dropdown-item" [routerLink]="['/admin/categorie', 'pc']" i18n>laptop</a></li>
                 <li><a class="dropdown-item" [routerLink]="['/admin/categorie', 'watch']" i18n>watch</a></li>
               </ul>
             </li>
