--- a/angular-couchdb/src/app/cart/cart.component.html
+++ b/angular-couchdb/src/app/cart/cart.component.html
@@ -26,7 +26,7 @@
             <h4>{{ item.name }}</h4>
             <p>{{ item.price }}</p>
             <details class="accordion">
-              <summary style="font-weight: bold;">Détails du produit</summary>
+              <summary style="font-weight: bold;" i18n>product details</summary>
               <div class="accordion-body">
                 <p>{{ item.description }}</p>
               </div>
