--- a/angular-couchdb/src/app/login/login.component.html
+++ b/angular-couchdb/src/app/login/login.component.html
@@ -5,7 +5,7 @@
                 <div class="row full-height justify-content-center">
                     <div class="col-12 text-center align-self-center py-5">
                         <div class="section pb-5 pt-5 pt-sm-2 text-center">
-                            <h6 class="mb-0 pb-3" ><span >Log In </span><span>Sign Up</span></h6>
+                            <h6 class="mb-0 pb-3" ><span i18n>Log In </span><span i18n>Sign Up</span></h6>
                             <input class="checkbox" type="checkbox" id="reg-log" name="reg-log"/>
                             <label for="reg-log"></label>
                             <div class="card-3d-wrap mx-auto">
@@ -13,7 +13,7 @@
                                     <div class="card-front">
                                         <div class="center-wrap">
                                             <div class="section text-center">
-                                                <h4 class="mb-4 pb-3" style="color: aliceblue;">Log In</h4>
+                                                <h4 class="mb-4 pb-3" style="color: aliceblue;" i18n>Log In</h4>
                                                 <div class="text-danger" *ngIf="errormessage">{{errormessage}}</div>
                                                 <form [formGroup]="formgroup" (ngSubmit)="handlelogin()">
                                                 <div class="form-group">
@@ -25,16 +25,16 @@
                                                     <input type="password" formControlName="password" name="logpass" class="form-style" placeholder="Your Password" id="logpass" autocomplete="off">
                                                     <i class="input-icon uil uil-lock-alt"></i>
                                                 </div>
-                                                <button type="submit">submit</button>
+                                                <button type="submit" i18n>submit</button>
                                             </form>
-                                                <p class="mb-0 mt-4 text-center"><a href="#0" class="link">Forgot your password?</a></p>
+                                                <p class="mb-0 mt-4 text-center"><a href="#0" class="link" i18n>Forgot your password?</a></p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="card-back">
                                         <div class="center-wrap">
                                           <div class="section text-center">
-                                            <h4 class="mb-4 pb-3" style="color: aliceblue;">Sign Up</h4>
+                                            <h4 class="mb-4 pb-3" style="color: aliceblue;" i18n>Sign Up</h4>
                                             <form [formGroup]="registerForm" (ngSubmit)="handleRegister()">
                                               <div class="form-group">
                                                 <input type="text" formControlName="username" class="form-style" placeholder="Your Full Name" autocomplete="off">
@@ -44,7 +44,7 @@
                                                 <input type="password" formControlName="password" class="form-style" placeholder="Your Password" autocomplete="off">
                                                 <i class="input-icon uil uil-lock-alt"></i>
                                               </div>
-                                              <button type="submit">Submit</button>
+                                              <button type="submit" i18n>Submit</button>
                                             </form>
                                           </div>
                                         </div>
